// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppGroupModal> allows creating new groups 1`] = `
<Modal
  contentLabel=""
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
>
  <ModalHeader
    onRequestClose={[Function]}
    title="Add to your group"
  />
  <BasicModal__ModalBody>
    <AppGroupModal__StyledModalBody>
      <AppList
        apps={
          Array [
            Object {
              "id": 0,
            },
          ]
        }
        i18n={
          Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
        }
      />
      <FlexGrid.Item
        flex={1}
      >
        <AppGroupModal__CenteredModalBody
          gutter="5px"
        >
          <Spinner
            size={16}
          />
          <span>
            Loading data
          </span>
        </AppGroupModal__CenteredModalBody>
      </FlexGrid.Item>
    </AppGroupModal__StyledModalBody>
  </BasicModal__ModalBody>
  <BasicModal__ModalFooter>
    <FlexGrid>
      <FlexGrid.Item
        flex={1}
      >
        <AppGroupModal__CreateGroupButton
          className="js-create-group"
          onClick={[Function]}
        >
          <FlexGrid
            gutter="3px"
          >
            <MdControlPoint
              size={16}
            />
            <span>
              Create a new group
            </span>
          </FlexGrid>
        </AppGroupModal__CreateGroupButton>
      </FlexGrid.Item>
      <ButtonPrimary
        onClick={[Function]}
      >
        Done
      </ButtonPrimary>
    </FlexGrid>
  </BasicModal__ModalFooter>
</Modal>
`;

exports[`<AppGroupModal> allows creating new groups 2`] = `
<Modal
  contentLabel=""
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
>
  <ModalHeader
    onRequestClose={[Function]}
    title="Add to your group"
  />
  <BasicModal__ModalBody>
    <AppGroupModal__StyledModalBody>
      <AppList
        apps={
          Array [
            Object {
              "id": 0,
            },
          ]
        }
        i18n={
          Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
        }
      />
      <AppGroupModal__StyledGroupListWrapper>
        <AppGroup
          addToGroup={[Function]}
          appIds={
            Array [
              0,
            ]
          }
          group={
            Object {
              "apps": Array [],
              "id": 1,
              "link": "",
              "name": "Group 1",
            }
          }
          i18n={
            Object {
              "gettext": [Function],
              "lang": "en-US",
              "ngettext": [Function],
              "npgettext": [Function],
              "pgettext": [Function],
            }
          }
          isLoading={false}
        />
      </AppGroupModal__StyledGroupListWrapper>
    </AppGroupModal__StyledModalBody>
  </BasicModal__ModalBody>
  <BasicModal__ModalFooter>
    <ClickOutside
      onClickOutside={[Function]}
    >
      <AppGroupModal__StyledInputWrapper
        autoFocus={true}
        maxLength="50"
        onKeyPress={[Function]}
        placeholder="Give your group a name and press enter"
      />
    </ClickOutside>
  </BasicModal__ModalFooter>
</Modal>
`;
